banner section, and trainings and exercises section mobile responsive issue correction done

--- a/style/style.css
+++ b/style/style.css
@@ -295,23 +295,23 @@ header {
 }
 
 #exercise-section .exercises-imgs .box-3 p {
-  top: 70%;
-  left: 12%;
+  top: 55%;
+  left: 10%;
 }
 
 #exercise-section .exercises-imgs .box-4 p {
-  top: 14%;
-  left: 40%;
+  top: 16%;
+  left: 30%;
 }
 
 #exercise-section .exercises-imgs .box-5 p {
-  top: 70%;
-  left: 10%;
+  top: 60%;
+  left: 8%;
 }
 
 #exercise-section .exercises-imgs .box-6 p {
-  top: 70%;
-  left: 10%;
+  top: 60%;
+  left: 8%;
 }
 
 #exercise-section .exercises-imgs img {
@@ -362,8 +362,8 @@ header {
 @media screen and (max-width: 576px) {
   /* common style */
   .btn {
-    font-size: 1rem;
-    padding:;
+    font-size: 0.8rem;
+    padding: 14px 20px;
   }
 
   /* main style */
@@ -393,18 +393,18 @@ header {
   }
 
   #banner .tooltip {
-    padding: 12px 18px;
+    padding: 10px 14px;
     border-radius: 12px;
-    font-size: 1rem;
+    font-size: 0.875rem;
   }
 
   #banner .tooltip h2 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   #banner .t-one {
     top: 15%;
-    right: -35px;
+    right: -6px;
   }
 
   #banner .t-two {
